--- a/public/style.css
+++ b/public/style.css
@@ -306,8 +306,8 @@ body {
         #00bfff, 
         #0099ff, 
         #6699ff, 
-        #9966ff, 
-        #cc33ff
+        #6633cc, 
+        #8b1a7e
     );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
