--- a/public/style.css
+++ b/public/style.css
@@ -788,13 +788,13 @@ body {
         position: fixed;
         top: 35%;
         left: 50%;
-        transform: translate(-50%, -50%);
+         transform: translateX(-50%);
         width: calc(100vw - 30px) !important;
         max-width: 400px !important;
         min-width: auto !important;
         height: 60vh !important;
-        max-height: 60vh !important;
-        min-height: 50vh !important;
+        max-height: 70vh !important;
+        min-height: 70vh !important;
         margin-bottom: 0;
         overflow: hidden !important;
     }
